test/parser/lambda/lambda_missing_lpar.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  ->x) {};
  // CHECK: [[# @LINE - 1 ]]:5: error: expected '(' or '{'
  // CHECK: [[# @LINE - 2 ]]:10: error: expected expression
}

// CHECK-NOT: {{.*error.*}}
